--- a/index.html
+++ b/index.html
@@ -7,50 +7,15 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="./js/script.js"></script>
-    <title>PokeGallery</title>
+    <title>Pokedex Gallery</title>
 </head>
 <body>
     <header>
-        <h1>PokeGallery</h1>
+        <h1>Pokedex Gallery</h1>
     </header>
     <main class="flex-ctr">
         <section class="flex-ctr" id="collection">
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Bulbasaur</h3>
-            </article>
+            
         </section>
     </main>
     <footer>
